@@ -1,3 +1,8 @@
+2015-12-18  Jeff Law  <law@redhat.com>
+
+	PR rtl-optimization/49847
+	* g++.dg/pr49847-2.C: New test.
+
 2015-12-18  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.dg/vect/pr68305.c (dg-additional-options): Add -mavx2
